--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Weiheng Wang"
-  avatar           : "profile.png"
+  avatar           : "大头形象照.jpg"
   bio              : "RWTH-Aachen"
   location         : "Aachen NRW"
   employer         :
