--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/wang-weiheng-19a2b8295/"
+  linkedin         : #"https://www.linkedin.com/in/wang-weiheng-19a2b8295/"
   orcid            : 
   pinterest        :
   soundcloud       :
